--- a/www/index.html
+++ b/www/index.html
@@ -10,7 +10,7 @@
     <div class="by-name">
     <h2>OCaml package documentation</h2>
     <ol>
-    <li><a href="monoidl/index.html">monoidl</a> <span class="version">0.1</span></li>
+    <li><a href="flog/index.html">flog</a> <span class="version">0.1</span></li>
     </ol>
     </div>
   </body>
